Formatted welcome page

--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,26 +1,26 @@
 <ion-header>
     <ion-navbar>
-        <button ion-button menuToggle>
+        <!-- <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
-        </button>
-        <ion-title>Welcome</ion-title>
+        </button> -->
+        <ion-title><img class="logo" src="assets/img/umcu-logo-icon-white.png"/></ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content no-bounce>
     <ion-slides>
 
-        <ion-slide style="background-image: url('assets/img/slide_properties.jpg')">
-            <p>Your dream house is just a few taps away! Select Properties in the menu to start your search.</p>
+        <ion-slide style="background-image: url('assets/img/slide_umcu_airial.jpg')">
+            <p>Welkom bij de <strong>UrStatus</strong> app van het UMC Utrecht.<br /><br />Swipe verder <ion-icon class="next-icon" name="arrow-dropright-circle"></ion-icon></p>
         </ion-slide>
 
-        <ion-slide style="background-image: url('assets/img/slide_brokers.jpg')">
-            <p>Select Brokers in the menu to connect with the best brokers in the business in a whole new way!</p>
+        <ion-slide style="background-image: url('assets/img/slide_umcu_entrance.jpg')">
+            <p>In deze app kunt u de status van uw verschillende organen zien en bijhorende behandelingen en adviezen. <br /><br /><button ion-button large (click)="openApp()">Open app&nbsp;<ion-icon name="phone-portrait"></ion-icon></button></p>
         </ion-slide>
 
-        <ion-slide style="background-image: url('assets/img/slide_favorites.jpg')">
+        <!-- <ion-slide style="background-image: url('assets/img/slide_favorites.jpg')">
             <p>Keep track of your favorites and get notified in real time when important events happen.</p>
-        </ion-slide>
+        </ion-slide> -->
 
     </ion-slides>
 
