--- a/src/pages/blank/blank.html
+++ b/src/pages/blank/blank.html
@@ -3,22 +3,22 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Blank</ion-title>
+        <ion-title>UrStatus</ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content>
-
+<!--
     <div class="blank-header">
         <img src="assets/img/umcu-logo.png">
     </div>
-
+-->
     <div padding class="blank-info">
 
-        <h4>Blanco pagina</h4>
+        <h4>Klik op het orgaan van keuze</h4>
 
         <p>
-            Dit is de supermooie lege pagina om als basis te gebruiken voor andere pagina's
+            <img src="assets/img/test.svg">
         </p>
 
     </div>
