Add status page + edited welcome slider

--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -11,7 +11,7 @@
     <ion-slides>
 
         <ion-slide style="background-image: url('assets/img/slide_umcu_airial.jpg')">
-            <p>Welkom bij de <strong>UrStatus</strong> app van het UMC Utrecht.<br /><br />Swipe verder <ion-icon class="next-icon" name="arrow-dropright-circle"></ion-icon></p>
+            <p>Welkom bij de <strong>UrStatus</strong> app van het UMC Utrecht.<br /><br /><button ion-button large outline color="light"> Ga verder&nbsp;<ion-icon class="next-icon" name="arrow-dropright-circle"></ion-icon></button></p>
         </ion-slide>
 
         <ion-slide style="background-image: url('assets/img/slide_umcu_entrance.jpg')">
