--- a/src/pages/blank/blank.html
+++ b/src/pages/blank/blank.html
@@ -8,11 +8,11 @@
 </ion-header>
 
 <ion-content>
-<!--
+
     <div class="blank-header">
-        <img src="assets/img/umcu-logo.png">
+        <h3>1.1 Patientnaam</h3>
     </div>
--->
+
     <div padding class="blank-info">
 
         <h4>Klik op het orgaan van keuze</h4>
