body parts in place in blank page

--- a/src/pages/blank/blank.html
+++ b/src/pages/blank/blank.html
@@ -15,10 +15,20 @@
 
     <div padding class="blank-info">
 
-        <h4>Klik op het orgaan van keuze</h4>
+        <div class="blank-body-box">
+            <img src="../assets/img/status/body.svg">
+            <div class="blank-bodyparts-brain"><img src="../assets/img/status/brain.svg" alt="hersenen"></div>
+            <div class="blank-bodyparts-lungs"><img src="../assets/img/status/lungs.svg" alt="hersenen"></div>
+            <div class="blank-bodyparts-heart"><img src="../assets/img/status/heart.svg" alt="hersenen"></div>
+            <div class="blank-bodyparts-liver"><img src="../assets/img/status/liver.svg" alt="hersenen"></div>
+            <div class="blank-bodyparts-pancreas"><img src="../assets/img/status/pancreas.svg" alt="hersenen"></div>            
+            <div class="blank-bodyparts-kidney_l"><img src="../assets/img/status/kidney_l.svg" alt="hersenen"></div>            
+            <div class="blank-bodyparts-kidney_r"><img src="../assets/img/status/kidney_r.svg" alt="hersenen"></div>            
+            <div class="blank-bodyparts-gastrointestinal"><img src="../assets/img/status/gastrointestinal.svg" alt="hersenen"></div>            
+        </div>
 
         <p>
-            <img src="assets/img/test.svg">
+            
         </p>
 
     </div>
