--- a/src/pages/status/status.html
+++ b/src/pages/status/status.html
@@ -9,16 +9,23 @@
 
 <ion-content>
 <!--
-    <div class="blank-header">
+    <div class="status-header">
         <img src="assets/img/umcu-logo.png">
     </div>
 -->
     <ion-grid>
         <ion-row>
             <ion-col col-12 col-sm>
-                <div  class="status-body">
-                    <h4 class="status-title">Klik op het orgaan van keuze</h4>
-                    <img src="assets/img/test.svg">
+                <div class="status-body-box">
+                    <img src="../assets/img/status/body.svg">
+                    <div class="status-bodyparts-brain"><img src="../assets/img/status/brain.svg" alt="hersenen"></div>
+                    <div class="status-bodyparts-lungs"><img src="../assets/img/status/lungs.svg" alt="hersenen"></div>
+                    <div class="status-bodyparts-heart"><img src="../assets/img/status/heart.svg" alt="hersenen"></div>
+                    <div class="status-bodyparts-liver"><img src="../assets/img/status/liver.svg" alt="hersenen"></div>
+                    <div class="status-bodyparts-pancreas"><img src="../assets/img/status/pancreas.svg" alt="hersenen"></div>            
+                    <div class="status-bodyparts-kidney_l"><img src="../assets/img/status/kidney_l.svg" alt="hersenen"></div>            
+                    <div class="status-bodyparts-kidney_r"><img src="../assets/img/status/kidney_r.svg" alt="hersenen"></div>            
+                    <div class="status-bodyparts-gastrointestinal"><img src="../assets/img/status/gastrointestinal.svg" alt="hersenen"></div>            
                 </div>
             </ion-col>
             <ion-col col-12 col-sm>
