--- a/src/pages/status/status.html
+++ b/src/pages/status/status.html
@@ -16,12 +16,61 @@
     <ion-grid>
         <ion-row>
             <ion-col col-12 col-sm>
-                <ion-item-sliding *ngFor="let organ of organs">
-                    <button ion-item (click)="openOrganPage(organ)">
-                        <h2>{{organ.name}}</h2>
-                        <p>{{organ.status}}</p>
-                    </button>
-                </ion-item-sliding>
+                    <ion-card>
+                        <ion-card-content>
+                            <h2 class="card-title"><strong>Pietje Puk</strong></h2>
+                            <p>Afdeling: B2</p>
+                        </ion-card-content>
+                        <ion-list>
+                            <ion-item>
+                                <ion-icon item-left name="body"></ion-icon>
+                                <h3>Diagnose</h3>
+                                <ion-note item-right>Nierfalen</ion-note>
+                            </ion-item>
+                            <ion-item>
+                                <ion-icon item-left name="medkit"></ion-icon>
+                                <h3>Behandeling</h3>
+                                <ion-note item-right>Niertransplantatie</ion-note>
+                            </ion-item>
+                        </ion-list>
+                        </ion-card>
+
+                        <ion-card>
+                                <ion-card-content>
+                                    <h2 class="card-title">Medisch team</h2>
+                                </ion-card-content>
+                                <ion-list>
+                                <ion-item>
+                                    <ion-icon item-left name="contact"></ion-icon>
+                                    <h3>Zaalarts van dienst</h3>
+                                    <ion-note item-right>Aaltje Arts</ion-note>
+                                </ion-item>
+                                <ion-item>
+                                    <ion-icon item-left name="contacts"></ion-icon>
+                                    <h3>Verpleegkundige van dienst</h3>
+                                    <ion-note item-right>Zissie de Zuster</ion-note>
+                                </ion-item>
+                                <ion-item>
+                                    <ion-icon item-left name="clipboard"></ion-icon>
+                                    <h3>Hoofdbehandelaar</h3>
+                                    <ion-note item-right>Prof, dr. dr. dr. Bert Boeman</ion-note>
+                                </ion-item>
+                                <!-- <button ion-item (click)="openBrokerDetail(property.broker)">
+                                    <ion-avatar item-left>
+                                        <img src="{{property.broker.picture}}"/>
+                                    </ion-avatar>
+                                    <h2>{{property.broker.name}}</h2>
+                                    <p>{{property.broker.title}}</p>
+                                </button> -->
+                            </ion-list>
+                    </ion-card>
+                    <!-- <ion-item>
+                        <ion-label>Pijn score</ion-label>
+                        <ion-range min="0" max="10" step="1" snaps="true" color="primary" [(ngModel)]="singleValue4">
+                                <ion-icon small range-left color="danger" name="sad"></ion-icon>
+                                <ion-icon small range-right color="safe" name="happy"></ion-icon>
+                        </ion-range>
+                    </ion-item> -->
             </ion-col>
             <ion-col col-12 col-sm>
                 <div class="status-box-wrapper">
