--- a/src/pages/status/status.html
+++ b/src/pages/status/status.html
@@ -77,7 +77,7 @@
                     <H5>Klik op het orgaan wat u wilt zien:</H5>
                     <div class="status-body-box">
                         <img src="../assets/img/status/body.svg">
-                        <div *ngFor="let organ of organs" class="status-bodyparts-{{organ.name}} zoom"><img (click)="openOrganPage(organ)" src="../assets/img/status/{{organ.name}}_grey.svg" alt="{{organ.alias}}"></div>
+                        <div *ngFor="let organ of organs" class="status-bodyparts-{{organ.name}} zoom"><img (click)="openOrganPage(organ)" src="../assets/img/status/{{organ.name}}_green.svg" alt="{{organ.alias}}"></div>
                     </div>
                 </div>
             </ion-col>
