--- a/src/pages/status/status.html
+++ b/src/pages/status/status.html
@@ -3,7 +3,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Status</ion-title>
+        <ion-title><img class="logo" src="assets/img/umcu-logo-icon-white.png"/></ion-title>
     </ion-navbar>
 </ion-header>
 
@@ -16,7 +16,7 @@
     <ion-grid>
         <ion-row>
             <ion-col col-12 col-sm>
-                    <ion-card>
+                    <ion-card class="status-medical status-card">
                         <ion-card-content>
                             <h2 class="card-title"><strong>Pietje Puk</strong></h2>
                             <p>Afdeling: B2</p>
@@ -35,7 +35,7 @@
                         </ion-list>
                     </ion-card>
 
-                    <ion-card>
+                    <ion-card class="status-team status-card">
                         <ion-card-content>
                             <h2 class="card-title">Medisch team</h2>
                         </ion-card-content>
