--- a/src/pages/detailpage/detailpage.html
+++ b/src/pages/detailpage/detailpage.html
@@ -3,34 +3,15 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>UrDetail</ion-title>
+        <ion-title>UrStatus</ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content>
 
-    <div class="detail-header">
+    <div class="blank-header">
         <h3>1.1 Patientnaam</h3>
     </div>
 
-    <div padding class="detail-info">
-
-        <h1>Uw Hart</h1>
-
-        <p>
-            <img src="assets/img/status/heart.svg" 
-                class='organimg'/>
-        </p>
-
-        <div class="row">
-            <div class="firstcol">
-                <h1>Hartslag: </h1>
-            </div>
-            <div class="secondcol">
-                <h1>Bloeddruk</h1>
-            </div>
-        </div>
-
-    </div>
-
+    <div id="container" style="display: block;"	></div>
 </ion-content>
