WHoops; forgot to commit a lot

--- a/src/pages/detailpage/detailpage.html
+++ b/src/pages/detailpage/detailpage.html
@@ -8,10 +8,7 @@
 </ion-header>
 
 <ion-content>
-
-    <div class="blank-header">
-        <h3>1.1 Patientnaam</h3>
+    <div class="padleft">
+        <div id="container" style="display: block;"	></div>
     </div>
-
-    <div id="container" style="display: block;"	></div>
 </ion-content>
